Add forgot password link

--- a/terpalert/accounts/templates/registration/login.html
+++ b/terpalert/accounts/templates/registration/login.html
@@ -42,6 +42,13 @@
             </div>
         </div>
 
+        <!-- Link to reset password page -->
+        <div class="row justify-content-center my-3">
+            <div class="col-md-6 col-sm-12">
+                <a href="{% url 'password_reset' %}">Forgot password</a>
+            </div>
+        </div>
+
         <!-- Link to sign up page -->
         <div class="row justify-content-center my-3">
             <div class="col-md-6 col-sm-12">
