Documentation and cleanup of email verification

--- a/terpalert/accounts/templates/registration/verify_email_confirm.html
+++ b/terpalert/accounts/templates/registration/verify_email_confirm.html
@@ -9,6 +9,7 @@
             <h1>Verify your email</h1>
         </div>
 
+        <!-- Show errors with email verification -->
         <div class="row text-center">
             {% if messages %}
                 {% for message in messages %}
