--- a/terpalert/accounts/templates/registration/verify_email_message.html
+++ b/terpalert/accounts/templates/registration/verify_email_message.html
@@ -1,9 +1,12 @@
 <div style="background-color: #c2c2c2; padding: 15px;">
-    <h2 style="margin: 0; padding: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; background-color: #e21833; color: #ffffff;">Verify Email</h2>
+    <h2 style="margin: 0; padding: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; background-color: #e21833; color: #ffffff;">
+        Verify Email</h2>
     <div style="margin: 0; padding: 15px; background-color: #ffffff;">
         <p>Hi {{ user.email }},</p>
-        <p>You created an account for TerpAlert, you need to verify your email. Please click on the button below to verify your email.</p>
-        <a href="{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #ffd200; padding: 15px; font-weight: bold; text-decoration: none; border-radius: 5px;">
+        <p>You created an account for TerpAlert, you need to verify your email. Please click on the button below to
+            verify your email.</p>
+        <a href="{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}"
+           style="border: 0; color: #ffffff; background-color: #ffd200; padding: 15px; font-weight: bold; text-decoration: none; border-radius: 5px;">
             Verify Email
         </a>
         <p style="margin-top: 40px;">Or you can copy the link below to your browser</p>
