--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -23,7 +23,7 @@
 <body>
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #e21833;">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #e21833;">
     <div class="container-fluid">
         <a href="{% url 'home' %}" class="navbar-brand">
             <span class="fw-bold">
