--- a/terpalert/static/style.css
+++ b/terpalert/static/style.css
@@ -16,6 +16,24 @@ BLACK: #000000
     font-family: Inter, sans-serif;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 100px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: var(--umd-red);
+    color: white;
+}
+
 body {
     margin-top: 10ex;
 }
