--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -64,6 +64,15 @@
 
 {% endblock %}
 
+<!-- Footer -->
+<footer class="footer pt-3 pb-2">
+    <div class="container text-center">
+        <div class="row justify-content-center">
+            <p class="col-xs-9">TerpAlert &copy 2024</p>
+        </div>
+    </div>
+</footer>
+
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
