--- a/terpalert/static/style.css
+++ b/terpalert/static/style.css
@@ -149,23 +149,33 @@ ul.ui-autocomplete {
 
 /* Standard syntax */
 @keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
 
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
+    20%, 80% {
+        transform: translate3d(2px, 0, 0);
+    }
 
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
+    30%, 50%, 70% {
+        transform: translate3d(-4px, 0, 0);
+    }
 
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+    40%, 60% {
+        transform: translate3d(4px, 0, 0);
+    }
 }
 
 .apply-shake {
-    animation: shake 1s cubic-bezier(.36,.07,.19,.97) both !important;
+    animation: shake 1s cubic-bezier(.36, .07, .19, .97) both !important;
 }
+
+.heading-border {
+    border-bottom: 2px solid black;
+}
+
+.indent-form {
+    padding-left: 60px;
+}
+
+
