Change home button text

--- a/terpalert/accounts/templates/registration/password_reset_sent.html
+++ b/terpalert/accounts/templates/registration/password_reset_sent.html
@@ -16,7 +16,7 @@
         <!-- Link to home -->
         <div class="row text-center my-3 justify-content-center">
             <div class="col-3">
-                <a class="btn btn-warning" href="{% url 'home' %}">Return to home</a>
+                <a class="btn btn-warning" href="{% url 'home' %}">Home</a>
             </div>
         </div>
     </div>
