--- a/terpalert/templates/500.html
+++ b/terpalert/templates/500.html
@@ -1,19 +1,94 @@
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
-{% block title %}500 Error | TerpAlert{% endblock %}
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}"/>
+    <script src="{% static 'main.js' %}"></script>
+    {% block scripts %}
+    {% endblock scripts %}
 
-{% block content %}
-    <div class="container-md my-3">
-        <div class="row text-center">
-            <h1>500 Error</h1>
-            <p>Something went wrong on our end, please try again later</p>
-        </div>
 
-        <!-- Link to home -->
-        <div class="row text-center my-3 justify-content-center">
-            <div class="col-3">
-                <a class="btn btn-warning" href="{% url 'home' %}">Home</a>
-            </div>
+    <title>500 Error | TerpAlert</title>
+</head>
+<body>
+
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #e21833;">
+    <div class="container-fluid">
+        <a href="{% url 'home' %}" class="navbar-brand">
+            <span class="fw-bold">
+                TerpAlert
+            </span>
+        </a>
+
+        <!-- toggle button for mobile devices -->
+        <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#main-nav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- nav links -->
+        <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+            <ul class="navbar-nav">
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account' %}">Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </div>
-{% endblock %}
+</nav>
+
+<!-- Content -->
+<div class="container-md my-3">
+    <div class="row text-center">
+        <h1>500 Error</h1>
+        <p>Something went wrong on our end, please try again later</p>
+    </div>
+
+    <!-- Link to home -->
+    <div class="row text-center my-3 justify-content-center">
+        <div class="col-3">
+            <a class="btn btn-warning" href="{% url 'home' %}">Home</a>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer class="footer pt-3 pb-2">
+    <div class="container text-center">
+        <div class="row justify-content-center">
+            <p class="col-xs-9">TerpAlert &copy 2024</p>
+        </div>
+    </div>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous">
+</script>
+
+</body>
+</html>
