--- a/terpalert/accounts/templates/home.html
+++ b/terpalert/accounts/templates/home.html
@@ -29,18 +29,18 @@
 
         <!-- User alert table header and new alert button -->
         <div class="row mt-3 heading-border">
-            <div class="col-9">
+            <div class="col-8">
                 <h3 class="col-9">Your alerts</h3>
             </div>
-            <div class="col-3 col-right">
-                <button type="button" class="btn btn-success btn-wide" id="add-button-wide"
+            <div class="col-4 col-right">
+                <button type="button" class="btn btn-success" id="add-button-wide"
                         name="add-button" onclick="this.blur(); addAlert(this);">
                     New alert
                 </button>
-                <button type="button" class="btn btn-outline-success btn-narrow" id="add-button-narrow"
-                        name="add-button" onclick="this.blur(); addAlert(this);">
-                    <i class="bi bi-plus-circle-fill"></i>
-                </button>
+{#                <button type="button" class="btn btn-outline-success btn-narrow" id="add-button-narrow"#}
+{#                        name="add-button" onclick="this.blur(); addAlert(this);">#}
+{#                    <i class="bi bi-plus-circle-fill"></i>#}
+{#                </button>#}
             </div>
         </div>
 
@@ -82,7 +82,7 @@
         <!-- Delete account button -->
         <div class="row mb-3">
             <h4>Account</h4>
-            <div class="col-3">
+            <div class="col-6">
                 <button type="button" class="btn btn-danger" id="delete_account_btn"
                         name="delete_account_btn" data-bs-toggle="modal"
                         data-bs-target="#delete-account-modal">
