Add logo to page titles

--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -16,6 +16,7 @@
     <script src="{% static 'main.js' %}"></script>
     {% block scripts %}
     {% endblock scripts %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'logo.png' %}">
 
 
     <title>{% block title %}{% endblock %}</title>
