Add logo to landing page

--- a/terpalert/core/templates/index.html
+++ b/terpalert/core/templates/index.html
@@ -36,6 +36,10 @@
             </div>
         </div>
 
+        <!-- Logo -->
+        <div class="row text-center justify-content-center">
+            <img class="image" src="{% static 'logo.png' %}">
+        </div>
     </div>
 
 {% endblock %}
