--- a/terpalert/core/templates/index.html
+++ b/terpalert/core/templates/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <!-- Logo -->
-        <div class="row text-center justify-content-center">
+        <div class="row text-center justify-content-center my-3">
             <img class="image" src="{% static 'logo.png' %}">
         </div>
     </div>
