Fix signup button from line breaking

--- a/terpalert/core/templates/index.html
+++ b/terpalert/core/templates/index.html
@@ -31,13 +31,13 @@
         <!-- Link to Signup Page -->
         <div class="row text-center my-3 justify-content-center">
             <h3>Want to save alerts and receive daily notifications?</h3>
-            <div class="col-3">
+            <div class="col-6">
                 <a class="btn btn-warning" href="{% url 'signup' %}">Sign up</a>
             </div>
         </div>
 
         <!-- Logo -->
-        <div class="row text-center justify-content-center my-3">
+        <div class="row text-center justify-content-center py-6">
             <img class="image" src="{% static 'logo.png' %}">
         </div>
     </div>
