--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -32,6 +32,13 @@
             </span>
         </a>
 
+        <!-- GitHub link -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="https://github.com/THuitema/TerpAlert" class="nav-link">GitHub</a>
+            </li>
+        </ul>
+
         <!-- toggle button for mobile devices -->
         <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#main-nav">
